--- a/arch/arm/boot/dts/armstonea9q.dts
+++ b/arch/arm/boot/dts/armstonea9q.dts
@@ -8,6 +8,9 @@
 
 /dts-v1/;
 
+/* Set board revision as 3-digit number, e.g. 110 for board rev. 1.10 */
+#define CONFIG_ARMSTONEA9_BOARD_REVISION	110
+
 /* ENABLE DISPLAYS */
 /* The following display config will be converted to Kconfig in the future */
 /* Keep the order, e.G. activating D0 and D3 but not D2 is not allowed */
@@ -19,10 +22,6 @@
 //#define CONFIG_ARMSTONEA9_D2
 /* Define this if you have a fourth display (D3) */
 //#define CONFIG_ARMSTONEA9_D3
-
-/* ENABLE BACKLIGHT LEVELS */
-/* enable 16 levels of backlight brightness with correct gamma */
-#define CONFIG_ARMSTONEA9_BL_LEVELS_16
 
 /* CONFIGURE DISPLAY 0 */
 #ifdef CONFIG_ARMSTONEA9_D0
@@ -128,17 +127,23 @@
 #endif
 
 
-/* TOUCH */
-/* Please select only one of the following touch devices. Make sure that the
-   corresponding touchscreen driver is activated in the kernel */
+/*
+ * Configure touch screen:
+ *
+ * - 4-wire/5-wire analog resistive touch (SX8655), on RGB LCD adapter
+ * - 4-wire/5-wire analog resistive touch (SX8655), on Touch Connector
+ * - PCAP touch based on Maxtouch controller (MXT224, etc.), on Touch Connector
+ * - PCAP touch based on Focaltech controller (FT5x06), on Touch connector
+ *
+ * Select none if you do not need touch support.
+ */
 #define CONFIG_ARMSTONEA9_4WTOUCH_SX8655_RGBADAPTER
+//#define CONFIG_ARMSTONEA9_4WTOUCH_SX8655
 //#define CONFIG_ARMSTONEA9_CAPTOUCH_MXT224
 //#define CONFIG_ARMSTONEA9_CAPTOUCH_FT5x06
 
-/* CMA */
-/* activate the define below and set a custom value if you want to change the
-   RAM size of continues memory allocator from default 320mb. */
-//#define CONFIG_EFUSA9_CMA_SIZE 0x4000000 /* e.g. 0x4000000 is 64mb */
+/* CMA: Set 320 MB for Continuous Memory Allocator */
+#define CONFIG_ARMSTONEA9_CMA_SIZE	0x14000000
 
 /* NAND */
 #define CONFIG_ARMSTONEA9_NAND
@@ -147,15 +152,15 @@
 #define CONFIG_ARMSTONEA9_SGTL5000_AUDIO
 
 /* Camera connected */
-#define CONFIG_ARMSTONEA9_CAMERA_INTERFACE
+#define CONFIG_ARMSTONEA9_CAMERA
 
-/* ?? */
-//#define CONFIG_ARMSTONEA9_PARALLEL_INTERFACE
+/* Camera on parallel CSI interface */
+//#define CONFIG_ARMSTONEA9_PARALLEL_CAMERA
 
-/* SERIAL INTERFACE - MIPI CAMERA */
-#define CONFIG_ARMSTONEA9_SERIAL_INTERFACE
+/* Camera on serial MIPI CSI interface */
+#define CONFIG_ARMSTONEA9_SERIAL_CAMERA
 
-/* SD-CARD - A is micro SD */
+/* SD-CARD - SD_A is micro SD */
 #define CONFIG_ARMSTONEA9_SD_A
 
 /* SATA */
@@ -178,10 +183,11 @@
 #include "armstonea9qdl.dtsi"
 
 / {
-	model = "F&S i.MX6 Quad armStoneA9 module";
+	model = "F&S i.MX6 Dual/Quad armStoneA9";
 	compatible = "fsl,imx6q-armstonea9", "fsl,imx6q";
 };
 
+/* i.MX6 Dual and Quad can have SATA */
 #ifdef CONFIG_ARMSTONEA9_SATA
 &sata{
 	status = "okay";
