--- a/arch/arm/boot/dts/armstonea9r2dl.dts
+++ b/arch/arm/boot/dts/armstonea9r2dl.dts
@@ -7,19 +7,15 @@
  */
 
 /dts-v1/;
-/* CHOOSE BOARD REVISION */
-#define CONFIG_ARMSTONEA9R2_REV100 // old board revision
-//#define CONFIG_ARMSTONEA9R2_REV110
+
+/* Set board revision as 3-digit number, e.g. 110 for board rev. 1.10 */
+#define CONFIG_ARMSTONEA9R2_BOARD_REVISION	100
 
 /* The following display config will be converted to Kconfig in the future */
 /* Define this if you have at least one display (D0) */
 #define CONFIG_ARMSTONEA9R2_D0
 /* Define this if you have a second display (D1) */
 //#define CONFIG_ARMSTONEA9R2_D1
-
-/* ENABLE BACKLIGHT LEVELS */
-/* enable 16 levels of backlight brightness with correct gamma */
-#define CONFIG_ARMSTONEA9R2_BL_LEVELS_16
 
 /* CONFIGURE DISPLAY 0 */
 #ifdef CONFIG_ARMSTONEA9R2_D0
@@ -80,17 +76,21 @@
 #define CONFIG_ARMSTONEA9R2_HDMI_CEC
 #endif
 
-
-/* TOUCH */
-/* Please select only one of the following touch devices. Make sure that the
-   corresponding touchscreen driver is activated in the kernel */
-//#define CONFIG_ARMSTONEA9R2_CAPTOUCH_MXT224
+/*
+ * Configure touch screen:
+ *
+ * - 4-wire/5-wire analog resistive touch (SX8655), on Touch Connector
+ * - PCAP touch based on Maxtouch controller (MXT224, etc.), on Touch Connector
+ * - PCAP touch based on Focaltech controller (FT5x06), on Touch Connector
+ *
+ * Select none if you do not need touch support.
+ */
+//#define CONFIG_ARMSTONEA9R2_4WTOUCH_SX8655
+#define CONFIG_ARMSTONEA9R2_CAPTOUCH_MXT224
 //#define CONFIG_ARMSTONEA9R2_CAPTOUCH_FT5x06
 
-/* CMA */
-/* activate the define below and set a custom value if you want to change the
-   RAM size of continues memory allocator from default 320mb. */
-//#define CONFIG_EFUSA9_CMA_SIZE 0x4000000 /* e.g. 0x4000000 is 64mb */
+/* CMA: Set 320 MB for Continuous Memory Allocator */
+#define CONFIG_ARMSTONEA9R2_CMA_SIZE	0x14000000
 
 /* NAND */
 #define CONFIG_ARMSTONEA9R2_NAND
@@ -98,14 +98,16 @@
 /* AUDIO */
 #define CONFIG_ARMSTONEA9R2_SGTL5000_AUDIO
 
-/* SERIAL INTERFACE - MIPI CAMERA */
-//#define CONFIG_ARMSTONEA9R2_SERIAL_INTERFACE
+/* Camera on serial MIPI CSI interface */
+//#define CONFIG_ARMSTONEA9R2_SERIAL_CAMERA
 
-/* SD-CARD - A is WLAN */
-#define CONFIG_ARMSTONEA9R2_WLAN
-/* SD-CARD - B is micro SD */
+/* SD-CARD - SD_A is micro SD */
 #define CONFIG_ARMSTONEA9R2_SD_A
-/* SD-CARD - C is eMMC */
+
+/* WLAN */
+#define CONFIG_ARMSTONEA9R2_WLAN
+
+/* EMMC */
 #define CONFIG_ARMSTONEA9R2_EMMC
 
 /* I2C */
@@ -116,7 +118,7 @@
 /* SPI */
 #define CONFIG_ARMSTONEA9R2_SPI_A
 #define CONFIG_ARMSTONEA9R2_SPI_B
-#define CONFIG_ARMSTONEA9R2_SPI_C
+#define CONFIG_ARMSTONEA9R2_SPI_FLASH
 
 /* UART */
 #define CONFIG_ARMSTONEA9R2_UART_A
@@ -132,7 +134,7 @@
 #include "armstonea9r2qdl.dtsi"
 
 / {
-	model = "F&S i.MX6 DualLite armStoneA9R2 module";
+	model = "F&S i.MX6 Solo/DualLite armStoneA9R2";
 	compatible = "fsl,imx6dl-armstonea9r2", "fsl,imx6dl";
 };
 
@@ -140,7 +142,7 @@
 &ldb {
 	ext_ref;
 #ifdef CONFIG_ARMSTONEA9R2_LVDS_DUAL_MODE
-	 dual-mode;
+	dual-mode;
 #endif
 #ifdef CONFIG_ARMSTONEA9R2_LVDS_SPLIT_MODE
 	split-mode;
@@ -180,3 +182,8 @@
 	status = "okay";
 };
 #endif
+
+/* i.MX6 Solo and DualLite have a PXP engine */
+&pxp {
+	status = "okay";
+};
