--- a/arch/arm/boot/dts/cubea7ul.dts
+++ b/arch/arm/boot/dts/cubea7ul.dts
@@ -8,10 +8,8 @@
 
 #define CONFIG_CUBEA7UL_NAND
 
-/* CMA */
-/* activate the define below and set a custom value if you want to change the
-   RAM size of continues memory allocator from default 320mb. */
-//#define CONFIG_EFUSA9_CMA_SIZE 0x4000000 /* e.g. 0x4000000 is 64mb */
+/* CMA: Set 64 MB for Continuous Memory Allocator */
+#define CONFIG_CUBEA7UL_CMA_SIZE 0x4000000
 
 /dts-v1/;
 
@@ -145,12 +143,9 @@
 	};
 };
 
-/* RAM size for continues memory allocator */
-#ifndef CONFIG_EFUSA9_CMA_SIZE
-	#define CONFIG_EFUSA9_CMA_SIZE 0x14000000 //set 320mb as default
-#endif
+/* RAM size for Continues Memory Allocator */
 &cma {
-	size = <CONFIG_EFUSA9_CMA_SIZE>; 
+	size = <CONFIG_CUBEA7UL_CMA_SIZE>;
 };
 
 &cpu0 {
