--- a/arch/arm/boot/dts/efusa9dl.dts
+++ b/arch/arm/boot/dts/efusa9dl.dts
@@ -7,12 +7,12 @@
  */
 
 /dts-v1/;
-/* CHOOSE BOARD REVISION */
-// #define CONFIG_EFUSA9_REV110 // old board revision
-#define CONFIG_EFUSA9_REV121
+
+/* Set board revision as 3-digit number, e.g. 110 for board rev. 1.10 */
+#define CONFIG_EFUSA9_BOARD_REVISION	120
 
 /* CONFIGURE 5V LVDS POWER SUPPLY */
-#ifdef CONFIG_EFUSA9_REV121
+#if (CONFIG_EFUSA9_BOARD_REVISION >= 121)
 /* With REV121 you can connect LVDS displays that need 5V.
    Most displays run with 3.3V. Define the variable below to configure the
    gpio used for switching to 5V. */
@@ -26,10 +26,6 @@
 #define CONFIG_EFUSA9_D0
 /* Define this if you have a second display (D1) */
 #define CONFIG_EFUSA9_D1
-
-/* ENABLE BACKLIGHT LEVELS */
-/* enable 16 levels of backlight brightness with correct gamma */
-#define CONFIG_EFUSA9_BL_LEVELS_16
 
 /* CONFIGURE DISPLAY 0 */
 #ifdef CONFIG_EFUSA9_D0
@@ -98,18 +94,24 @@
 #endif
 
 
-/* TOUCH */
-/* Please select only one of the following touch devices. Make sure that the
-   corresponding touchscreen driver is activated in the kernel */
+/*
+ * Configure touch screen:
+ *
+ * - 4-wire/5-wire analog resistive touch, touch controller on SKIT
+ * - 4-wire/5-wire analog resistive touch, touch controller on RGB LCD adapter
+ * - PCAP touch based on Maxtouch controller (MXT224, etc.), on Touch Connector
+ * - PCAP touch based on Focaltech controller (FT5x06), on Touch Connector
+ *
+ * On efusA9, all touches use the same interrupt line and I2C bus, so do not
+ * select more than one entry! Select none if you do not need touch support.
+ */
 //#define CONFIG_EFUSA9_4WTOUCH_SX8655_ONBOARD
 #define CONFIG_EFUSA9_4WTOUCH_SX8655_RGBADAPTER
 //#define CONFIG_EFUSA9_CAPTOUCH_MXT224
 //#define CONFIG_EFUSA9_CAPTOUCH_FT5x06
 
-/* CMA */
-/* activate the define below and set a custom value if you want to change the
-   RAM size of continues memory allocator from default 320mb. */
-//#define CONFIG_EFUSA9_CMA_SIZE 0x4000000 /* e.g. 0x4000000 is 64mb */
+/* CMA: Set 320 MB for Continuous Memory Allocator */
+#define CONFIG_EFUSA9_CMA_SIZE		0x14000000
 
 /* NAND */
 #define CONFIG_EFUSA9_NAND
@@ -118,15 +120,15 @@
 #define CONFIG_EFUSA9_SGTL5000_AUDIO
 
 /* Camera connected */
-#define CONFIG_ARMSTONEA9_CAMERA_INTERFACE
+#define CONFIG_EFUSA9_CAMERA
 
-/* ?? */
-//#define CONFIG_EFUSA9_PARALLEL_INTERFACE
+/* Camera on parallel CSI interface */
+//#define CONFIG_EFUSA9_PARALLEL_CAMERA
 
-/* SERIAL INTERFACE - MIPI CAMERA*/
-#define CONFIG_EFUSA9_SERIAL_INTERFACE
+/* Camera on serial MIPI CSI interface */
+#define CONFIG_EFUSA9_SERIAL_CAMERA
 
-/* SD-CARD - A is micro SD; B is normalsize SD */
+/* SD-CARD - On SKIT: SD_A is micro SD, SD_B is normalsize SD */
 #define CONFIG_EFUSA9_SD_A
 #define CONFIG_EFUSA9_SD_B
 
@@ -153,20 +155,15 @@
 #include "efusa9qdl.dtsi"
 
 / {
-	model = "F&S i.MX6 DualLite efusA9 module";
+	model = "F&S i.MX6 Solo/DualLite efusA9 module";
 	compatible = "fsl,imx6dl-efusa9", "fsl,imx6dl";
-};
-
-&dma_apbh {
-	/* Switch to F&S implementation of APBH DMA driver for GPMI (NAND) */
-	compatible = "fus,imx6dl-dma-apbh", "fus,imx28-dma-apbh";
 };
 
 #ifdef CONFIG_EFUSA9_LVDS
 &ldb {
 	ext_ref;
 #ifdef CONFIG_EFUSA9_LVDS_DUAL_MODE
-	 dual-mode;
+	dual-mode;
 #endif
 #ifdef CONFIG_EFUSA9_LVDS_SPLIT_MODE
 	split-mode;
@@ -212,6 +209,8 @@
 	status = "okay";
 };
 #endif
+
+/* i.MX6 Solo and DualLite have a PXP engine */
 &pxp {
 	status = "okay";
 };
